--- a/Project_main.ipynb
+++ b/Project_main.ipynb
@@ -11,6 +11,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **PREDICTING,ANALYSING & VISUALIZING THE DATASET THAT CONTAINS PRICE AND FEATURES OF USED CARS.**\n",
+        "\n",
+        "***Here i'm predicting the price of used cars using different regression models***"
+      ],
+      "metadata": {
+        "id": "155AnInPrmfz"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -37,6 +48,37 @@
       "metadata": {
         "id": "ffKUIJ7SS18T"
       }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yB0h8PYCL493",
+        "outputId": "5bfa27ce-bc23-4d22-c0d6-14c243827813"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['dateCrawled', 'name', 'seller', 'offerType', 'price', 'abtest',\n",
+              "       'vehicleType', 'yearOfRegistration', 'gearbox', 'powerPS', 'model',\n",
+              "       'kilometer', 'monthOfRegistration', 'fuelType', 'brand',\n",
+              "       'notRepairedDamage', 'dateCreated', 'nrOfPictures', 'postalCode',\n",
+              "       'lastSeen'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 203
+        }
+      ],
+      "source": [
+        "usedcar.columns"
+      ]
     },
     {
       "cell_type": "code",
@@ -85,37 +127,6 @@
       ],
       "source": [
         "usedcar.info()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yB0h8PYCL493",
-        "outputId": "5bfa27ce-bc23-4d22-c0d6-14c243827813"
-      },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['dateCrawled', 'name', 'seller', 'offerType', 'price', 'abtest',\n",
-              "       'vehicleType', 'yearOfRegistration', 'gearbox', 'powerPS', 'model',\n",
-              "       'kilometer', 'monthOfRegistration', 'fuelType', 'brand',\n",
-              "       'notRepairedDamage', 'dateCreated', 'nrOfPictures', 'postalCode',\n",
-              "       'lastSeen'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 203
-        }
-      ],
-      "source": [
-        "usedcar.columns"
       ]
     },
     {
@@ -6641,7 +6652,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvGKCmLI/vjHXOwO2jxiq0",
+      "authorship_tag": "ABX9TyODLBmPU7CRIw35p7QzNjHA",
       "include_colab_link": true
     },
     "kernelspec": {
